# no-nonsense-recipes

./: .dockerignore  .gitignore  Caddyfile  Cargo.toml  Dockerfile  README.md  compose.yml
.github/workflows/: docker-publish.yml
recipes/: broccoli-curry-with-gunpowder-potatoes.md  honey-soy-salmon.md  stuffed-aubergine-lamb-mince.md  sweet-and-sour-cauliflower.md
src/: compiler.rs  main.rs  views.rs
