[package]
name = "no-nonsense-recipes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0"
comrak = "0.21.0"
maud = { version = "0.26.0", features = ["rocket"] }
serde = { version = "1.0.198", features = ["std", "derive"] }
serde_yaml = "0.9.34"

[dev-dependencies]
tempdir = "0.3.7"
